Debug html and fix overlapping h1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,10 @@ body {
     letter-spacing: 2px;
     color: #FBF1EB;
     background-color: #48494D;
-    max-width: 100%;
-    min-height: 100%;
+    width: 100vw;
+    height: 100vw;
+    max-width: 100vw;
+    min-height: 100vh;
 }
 
 /* headings and logo */
@@ -32,7 +34,6 @@ h3 {
 
 .header-center {
     font-size: 220%;
-    
 }
 
 .logo {
@@ -44,9 +45,14 @@ h3 {
     display: block;
 }
 
+h1 {
+    height: 26vh;
+    width: 30vw;
+}
+
 .logo img {
-    padding-top: 10px;
-    padding-left: 30px;
+    padding-top: 2%;
+    padding-left: 2%;
     height: 26vh;
     width: fit-content;
 }
@@ -99,15 +105,12 @@ h3 {
 .hero-image-crop {
     height: 55vh;
     width: 100vw;
-    max-width: 100%;
-    max-height: 100%;
     background: url('../images/grapes-header.png') no-repeat top;
     object-fit: cover;
-    margin-bottom: -20vh;
     margin-left: 0;
+    top: 19vh;
     position: relative;    
     overflow: hidden;
-
 }
 
 .cover-text {
